[package]
name = "rusty_bench"
version = "0.1.0"
edition = "2021"
description = "Rustybench is a gui tool to manage audio files an the SD-Card of a Toniebox audio player"
repository = "https://github.com/Schievel1/rustybench"
authors = ["Pascal Jaeger <pascal.jaeger@leimstift.de>"]
license = "GPL-2.0-only"

[dependencies]
anyhow = "*"
arrayvec = "0.7.1"
eframe = "*"
egui_extras = "*"
env_logger = "*"
flate2 = "*"
lazy_static = "1.4.0"
log = "*"
open = "*"
rfd = "*"
rubato = "0.12.0"
symphonia = { version = "0.5.3", features = ["all"] }
tar = "*"
toniefile = { git = "https://github.com/Schievel1/toniefile" }

[build-dependencies]
prost-build = { version = "0.6" }
