[package]
name = "rusty_bench"
version = "0.3.0"
edition = "2021"
description = "Rustybench is a gui tool to manage audio files an the SD-Card of a Toniebox audio player"
repository = "https://github.com/Schievel1/rustybench"
authors = ["Pascal Jaeger <pascal.jaeger@leimstift.de>"]
license = "GPL-2.0-only"

[dependencies]
anyhow = "^1.0"
arrayvec = "0.7.1"
clap = { version = "^4.0", features = ["derive"] }
clap-verbosity-flag = "^2.0"
crossbeam = "*"
eframe = "0.25.0"
egui_extras = "0.25.0"
env_logger = "0.11.1"
flate2 = "^1.0"
lazy_static = "1.4.0"
log = "0.4.20"
open = "^5.0"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
rfd = "0.13.0"
rubato = "0.12.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.68"
symphonia = { version = "0.5.3", features = ["all"] }
toniefile = "0.1.1"

[build-dependencies]
prost-build = { version = "0.6" }

[profile.dev]
opt-level = 1

[package.metadata.appimage]
auto_link = true
